---
source: mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "B86122579EDCDD4C51F3910894FCC1A1"  )',
    '(  "agg_tiles_hash_after_apply", "FE0D3090E8B4E89F2C755C08E8D76BEA"  )',
    '(  "md-edit", "value - v2"  )',
    '(  "md-new", "value - new"  )',
    '(  "md-remove", NULL  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 1, 1, blob(edit-v2)  )',
    '(  5, 1, 2, blob(not-empty)  )',
    '(  5, 1, 3, blob()  )',
    '(  5, 2, 2, NULL  )',
    '(  5, 2, 3, NULL  )',
    '(  5, 3, 7, blob(new)  )',
    '(  5, 3, 8, blob(new)  )',
    '(  6, 1, 4, blob(edit-v2a)  )',
    '(  6, 2, 6, NULL  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
